kotlin/semlang-parser/src/test/semlang/validatorTests/fail/nameCollision5.sem

interface Foo {
  a(): Integer
}

struct Foo {
  b: Integer
}
